(fix) fix sidebar z-index

--- a/assets/styles/sidebar.css
+++ b/assets/styles/sidebar.css
@@ -9,6 +9,7 @@
   align-items: center;
   flex-direction: column;
   padding: 1rem;
+  z-index: 999;
 }
 
 .sidebar__pfp {
